# engram

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  blueprint.md  devlog.md  evaluation.md  interview-qa.md  learning-notes.md  roadmap.md
docs/adr/: 001-vector-store-selection.md
scripts/: check_deepseek.py
src/: config.py
