[project]
name = "engram"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "scripts"]
target-version = "py312"
